Update AbstractVariant to use Java List rather than Guava ImmutableList